fix: provide user-info to chi router
