# docs/swagger.json
@@ -7,6 +7,19 @@
     },
     "basePath": "/api",
     "paths": {
+        "/api/auth/connect/google/callback": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "google redirect to this route",
+                "responses": {
+                    "307": {
+                        "description": "Temporary Redirect"
+                    }
+                }
+            }
+        },
         "/api/auth/logout": {
             "get": {
                 "tags": [
@@ -288,19 +301,6 @@
                                 "description": "Set access token cookie; e.g. access_token=\u003ctoken\u003e; HttpOnly; Path=/; Secure"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/api/connect/google/callback": {
-            "get": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "google redirect to this route",
-                "responses": {
-                    "307": {
-                        "description": "Temporary Redirect"
                     }
                 }
             }
